--- a/templates/results.html
+++ b/templates/results.html
@@ -49,9 +49,9 @@
                             {% set origin_code = flight.itineraries[0].segments[0].departure.iataCode %}
                             {% set destination_code = flight.itineraries[0].segments[-1].arrival.iataCode %}
                             {% set departure_date = flight.itineraries[0].segments[0].departure.at[:10] %}
-                            <a href="https://www.google.com/flights?hl=en#flt={{ origin_code }}.{{ destination_code }}.{{ departure_date }}" 
-                               target="_blank" 
-                               class="btn btn-sm btn-outline-danger">
+                            <a href="https://www.google.com/travel/flights?q=flights+from+{{ origin_code }}+to+{{ destination_code }}+on+{{ departure_date }}"
+                               target="_blank"
+                                class="btn btn-sm btn-outline-danger">
                                 ✈️ Google Flights
                             </a>
                         </td>
