--- a/templates/results.html
+++ b/templates/results.html
@@ -52,7 +52,7 @@
                             <a href="https://www.google.com/travel/flights?q=flights+from+{{ origin_code }}+to+{{ destination_code }}+on+{{ departure_date }}"
                                target="_blank"
                                 class="btn btn-sm btn-outline-danger">
-                                ✈️ Google Flights
+                                ✈️ Find your Flight
                             </a>
                         </td>
                     </tr>
